--- a/canyon.html
+++ b/canyon.html
@@ -11,7 +11,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Zombie Choppa</title>
       <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="css/style.css" />
     </head>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">MINICLIP</a>
