--- a/games/zombie.html
+++ b/games/zombie.html
@@ -8,32 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zombie Choppa</title>
     <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-    <link rel="stylesheet" href="images/zombieApoc.jpg">
+    <link rel="stylesheet" href="/css/zombie.css">
 </head>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">MINICLIP</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li> -->
-      </ul>
 
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
+        <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
+        width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
+      <li class="nav-item active">
+        <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+  
+</nav>
 
 
 <body>
     <div class="bg mx-auto">
         <p class="py-5 text-center">
-        <div class="container bg-dark">
+        <div class="container bg-dark mx-auto">
             <div class="row">
                 <div class="col sm">
                 </div>
@@ -47,9 +49,8 @@
             </div>
         </div>
     </div>
-
-
 </body>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
