trying heroku out if this file structure wont display images on github (works locally)

--- a/Games-HTML/canyon.html
+++ b/Games-HTML/canyon.html
@@ -8,38 +8,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Canyon Defense</title>
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/Style/style.css" />
 </head>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
-          <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
-          width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
-        <li class="nav-item active">
-          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-    
-  </nav>
-  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
+        <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
+        width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
+      <li class="nav-item active">
+        <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+  </div>
+
+</nav>
+
 <body>
   <div class="bg mx-auto">
-    <p class="py-3 text-center"></p>
+    <p class="py-5 text-center"></p>
     <div class="container bg-dark">
       <div class="row">
         <div class="col sm"></div>
         <div class="col sm my-4">
-          <div class="miniclip-game-embed" data-game-name="monkey-kick" data-theme="5" data-width="800"
-            data-height="800" data-language="en"></div>
+          <div class="miniclip-game-embed" data-game-name="canyon-defense" data-theme="5" data-width="800"
+            data-height="550" data-language="en"></div>
         </div>
         <div class="col sm"></div>
       </div>
