--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MINICLIP Game Site</title>
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="Style/style.css" />
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
@@ -18,20 +18,22 @@
 
 <body>
   <div class="bg mx-auto">
-    <p class="py-5 text-center"></p>
-    <div class="container bg-dark">
+    <p class="py-5 text-center text-white ">Click links to play the games.</p>
+    <div class="container bg-dark mx-auto">
       <div class="row">
 
-        <div class="col sm py-3 m-3">
+        <div class="col sm ml-5 py-5">
           <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0"
             cellpadding="0">
             <tr>
-              <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
-                <a href="games/zombie.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/zombie_choppa_70_59.jpg" width="110"
-                    height="100" align="left" style="margin-right:5px; border:0;"
+              <td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
+                <a href="Games-HTML/zombie.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/zombie_choppa_70_59.jpg"
+                   width="115"
+                    height="110"
+                     align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Zombie Choppa" />
-                  <a href="games/zombie.html"
+                  <a href="Games-HTML/zombie.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Zombie Choppa</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Get to the flares, rescue survivors
                     and avoid the marauding zombies!</p>
@@ -41,16 +43,18 @@
           </table>
         </div>
 
-        <div class="col sm py-3 m-3">
+        <div class="col sm ml-5 py-5">
           <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0"
             cellpadding="0">
             <tr>
-              <td style="font-family:verdana; font-size:13px; color:#000; padding:5px 10px;">
-                <a href="games/canyon.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg" width="100"
-                    height="100" align="left" style="margin-right:5px; border:0;"
+              <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
+                <a href="Games-HTML/canyon.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg"
+                   width="115"
+                    height="110"
+                    align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Canyon Defense" />
-                  <a href="games/canyon.html"
+                  <a href="Games-HTML/canyon.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Canyon Defense</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Build an ideal defense system and
                     save the inhabitants.</p>
@@ -60,13 +64,16 @@
           </table>
         </div>
 
-        <div class="col sm py-3 m-3">
+        <div class="col sm ml-5 py-5">
           <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0" cellpadding="0">
             <tr>
-              <td style="font-family:verdana; font-size:13px; color:#000; padding:5px 10px;">
-                <a href="games/monkey.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" width="100" height="100" align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Monkey Kick" />
-                  <a href="games/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
+              <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
+                <a href="Games-HTML/monkey.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg"
+                   width="115"
+                    height="110"
+                     align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Monkey Kick" />
+                  <a href="Games-HTML/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Help Monkey Kick Furball to the hills and beyond! How far can you get?</p>
                 </a>
               </td>
