--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MINICLIP Game Site</title>
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-  <link rel="stylesheet" href="Style/style.css" />
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
@@ -33,7 +33,7 @@
                     height="110"
                      align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Zombie Choppa" />
-                  <a href="Games-HTML/zombie.html"
+                  <a href="games/zombie.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Zombie Choppa</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Get to the flares, rescue survivors
                     and avoid the marauding zombies!</p>
@@ -48,13 +48,13 @@
             cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
-                <a href="Games-HTML/canyon.html" style="display:block; text-decoration:none;">
+                <a href="games/canyon.html" style="display:block; text-decoration:none;">
                   <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg"
                    width="115"
                     height="110"
                     align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Canyon Defense" />
-                  <a href="Games-HTML/canyon.html"
+                  <a href="games/canyon.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Canyon Defense</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Build an ideal defense system and
                     save the inhabitants.</p>
@@ -68,12 +68,12 @@
           <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0" cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
-                <a href="Games-HTML/monkey.html" style="display:block; text-decoration:none;">
+                <a href="games/monkey.html" style="display:block; text-decoration:none;">
                   <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg"
                    width="115"
                     height="110"
                      align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Monkey Kick" />
-                  <a href="Games-HTML/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
+                  <a href="games/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Help Monkey Kick Furball to the hills and beyond! How far can you get?</p>
                 </a>
               </td>
