moved css folder into assets and renamed it css

--- a/games/zombie.html
+++ b/games/zombie.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zombie Choppa</title>
     <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-    <link rel="stylesheet" href="/styles/zombie.css">
+    <link rel="stylesheet" href="/assets/css/zombie.css">
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
