moved games folder

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
-                <a href="assets/games/zombie.html" style="display:block; text-decoration:none;">
+                <a href="games/zombie.html" style="display:block; text-decoration:none;">
                   <img src="https://static.miniclipcdn.com/content/game-icons/small/zombie_choppa_70_59.jpg"
                    width="115"
                     height="110"
                      align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Zombie Choppa" />
-                  <a href="assets/games/zombie.html"
+                  <a href="games/zombie.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Zombie Choppa</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Get to the flares, rescue survivors
                     and avoid the marauding zombies!</p>
@@ -48,13 +48,13 @@
             cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
-                <a href="assets/games/canyon.html" style="display:block; text-decoration:none;">
+                <a href="games/canyon.html" style="display:block; text-decoration:none;">
                   <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg"
                    width="115"
                     height="110"
                     align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Canyon Defense" />
-                  <a href="assets/games/canyon.html"
+                  <a href="games/canyon.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Canyon Defense</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Build an ideal defense system and
                     save the inhabitants.</p>
@@ -68,12 +68,12 @@
           <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0" cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
-                <a href="assets/games/monkey.html" style="display:block; text-decoration:none;">
+                <a href="games/monkey.html" style="display:block; text-decoration:none;">
                   <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg"
                    width="115"
                     height="110"
                      align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Monkey Kick" />
-                  <a href="assets/games/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
+                  <a href="games/monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
                   <p style="margin:0; clear:none; text-decoration:none; color:#000;">Help Monkey Kick Furball to the hills and beyond! How far can you get?</p>
                 </a>
               </td>
