--- a/monkey.html
+++ b/monkey.html
@@ -24,7 +24,7 @@
           <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
           width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
         <li class="nav-item active">
-          <a class="nav-link" href="/main.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
