--- a/canyon.html
+++ b/canyon.html
@@ -8,7 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Canyon Defense</title>
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
+  <style>
+    body {
+      background-color: black;
+    }
+    </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
