--- a/canyon.html
+++ b/canyon.html
@@ -10,10 +10,20 @@
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
   <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
   <style>
-    body {
-      background-color: black;
+    body,
+    html {
+
+      height: 100%;
     }
-    </style>
+
+    body {
+
+      background-image: url("assets/images/dark.png");
+      /* Adjust height */
+      height: 100%;
+
+    }
+  </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
@@ -25,8 +35,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
-        <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
-        width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
+        <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" width="30"
+          height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
       <li class="nav-item active">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
