--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MINICLIP Game Site</title>
   <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <!-- <link rel="stylesheet" href="/assets/css/style.css" /> -->
+  <style>
+    body,
+    html {
+
+      height: 100%;
+    }
+
+    body {
+
+      background-image: url("assets/images/dark.png");
+      /* Adjust height */
+      height: 100%;
+
+    }
+  </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
