--- a/zombie.html
+++ b/zombie.html
@@ -8,7 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zombie Choppa</title>
     <script src="//static.miniclipcdn.com/js/game-embed.js"></script>
-    <link rel="stylesheet" href="/assets/css/zombie.css">
+    <!-- <link rel="stylesheet" href="/assets/css/zombie.css"> -->
+    <style>
+      body,
+      html {
+  
+        height: 100%;
+      }
+  
+      body {
+  
+        background-image: url("assets/images/zombie.jpg");
+        /* Adjust height */
+        height: 100%;
+  
+      }
+    </style>
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
