figured out the background and added 3 more games to the app

--- a/index.html
+++ b/index.html
@@ -23,30 +23,51 @@
       height: 100%;
 
     }
+
+    h1, h2 {
+      font-size: 110px;
+      text-align: center;
+      background: -webkit-linear-gradient(rgb(224, 156, 10), rgb(240, 29, 29));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: white;
+    }
+
+    h2 {
+      font-size: 60px;
+    }
   </style>
+
 </head>
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="https://www.miniclip.com/webmasters/genre-432/webmaster-games/en/" target="_blank">
-    <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" 
-    width="30" height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
+    <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg" width="30"
+      height="30" class="d-inline-block align-top" alt="Miniclip Webmaster Games"></a>
 </nav>
 
 <body>
-  <div class="bg mx-auto">
-    <p class="py-5 text-center text-white ">Click links to play the games.</p>
-    <div class="container bg-dark mx-auto">
+  <div class="bg mx-auto py-5 ml-5">
+    <div>
+      <h1>MAC'S MINICLIP</h1>
+    </div>
+    <div>
+      <h2>Click on a game to play!</h2>
+    </div>
+    <div class="container bg-dark mx-auto py-2">
       <div class="row">
 
         <div class="col sm ml-5 py-5">
-          <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0"
-            cellpadding="0">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
                 <a href="zombie.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/zombie_choppa_70_59.jpg"
-                   width="115"
-                    height="110"
-                     align="left" style="margin-right:5px; border:0;"
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/zombie_choppa_70_59.jpg" width="115"
+                    height="110" align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Zombie Choppa" />
                   <a href="zombie.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Zombie Choppa</a>
@@ -59,15 +80,14 @@
         </div>
 
         <div class="col sm ml-5 py-5">
-          <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0"
-            cellpadding="0">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
             <tr>
               <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
                 <a href="canyon.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg"
-                   width="115"
-                    height="110"
-                    align="left" style="margin-right:5px; border:0;"
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/canyondefense.jpg" width="115"
+                    height="110" align="left" style="margin-right:5px; border:0;"
                     alt="Games at Miniclip.com - Canyon Defense" />
                   <a href="canyon.html"
                     style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Canyon Defense</a>
@@ -80,26 +100,88 @@
         </div>
 
         <div class="col sm ml-5 py-5">
-          <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #ccc;" cellspacing="0" cellpadding="0">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
             <tr>
-              <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
+              <td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
                 <a href="monkey.html" style="display:block; text-decoration:none;">
-                  <img src="https://static.miniclipcdn.com/content/game-icons/small/MiniclipCommunity-smallicon_v2.jpg"
-                   width="115"
-                    height="110"
-                     align="left" style="margin-right:5px; border:0;" alt="Games at Miniclip.com - Monkey Kick" />
-                  <a href="monkey.html" style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
-                  <p style="margin:0; clear:none; text-decoration:none; color:#000;">Help Monkey Kick Furball to the hills and beyond! How far can you get?</p>
+                  <img src="https://static2.miniclipcdn.com/content/game-icons/medium/monkey_150x110.jpg" width="115"
+                    height="110" align="left" style="margin-right:5px; border:0;"
+                    alt="Games at Miniclip.com - Monkey Kick" />
+                  <a href="monkey.html"
+                    style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Monkey Kick</a>
+                  <p style="margin:0; clear:none; text-decoration:none; color:#000;">Help Monkey Kick Furball to the
+                    hills and beyond! How far can you get?</p>
                 </a>
               </td>
             </tr>
-
           </table>
-          
         </div>
-        
+
+        <div class="col sm ml-5 py-5">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
+            <tr>
+              <td style="font-family:verdana; font-size:12px; color:#000; padding:5px 10px;">
+                <a href="ride.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/shortride_70x59.jpg" width="115"
+                    height="110" align="left" style="margin-right:5px; border:0;"
+                    alt="Games at Miniclip.com - Short Ride" />
+                  <a href="ride.html"
+                    style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Short Ride</a>
+                  <p style="margin:0; clear:none; text-decoration:none; color:#000;">It's a Short Life! With so many
+                    dumb ways to die!</p>
+                </a>
+              </td>
+            </tr>
+          </table>
+        </div>
+
+        <div class="col sm ml-5 py-5">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
+            <tr>
+              <td style="font-family:verdana; font-size:11px;  padding:5px 10px;">
+                <a href="cartapult.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/cartapult_70x59.jpg" width="115"
+                    height="110" align="left" style="margin-right:5px; border:0;"
+                    alt="Cartapult" />
+                  <a href="cartapult.html"
+                    style="font-weight:bold; color:#000; border:none; text-decoration:underline;">Cartapult</a>
+                  <p style="margin:0; clear:none; text-decoration:none; color:#000;">Cartapult your vehicles into the
+                    city for maximum mayhem and destruction!</p>
+                </a>
+              </td>
+            </tr>
+          </table>
+
+        </div>
+
+        <div class="col sm ml-5 py-5">
+          <table
+            style="margin:0 0 10px 0; width:244px; background:rgb(146, 153, 170); border:4px solid rgb(2, 116, 247);"
+            cellspacing="0" cellpadding="0">
+            <tr>
+              <td style="font-family:verdana; font-size:11px; color:#000; padding:5px 10px;">
+                <a href="8ball.html" style="display:block; text-decoration:none;">
+                  <img src="https://static.miniclipcdn.com/content/game-icons/small/8ballpoolmultiplayerv6.jpg"
+                    width="115" height="110" align="left" style="margin-right:5px; border:0;"
+                    alt="8 Ball Pool" />
+                  <a href="8ball.html"
+                    style="font-weight:bold; color:#000; border:none; text-decoration:underline;">8 Ball Pool</a>
+                  <p style="margin:0; clear:none; text-decoration:none; color:#000;">Play 8 Ball Pool against other players!</p>
+                </a>
+              </td>
+            </tr>
+          </table>
+        </div>
+
       </div>
     </div>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
   integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -108,3 +190,4 @@
 
 </html>
 </div>
+
